# fints-transaction-importer

./: .gitignore  flake.nix
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/fints_ledger_bridge/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/fints_ledger_bridge/: MainActivity.kt
android/app/src/main/java/com/example/fints_ledger_bridge/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/fints_ledger_bridge/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
app/: api.py  database_manager.py  fetch_transactions.py  ledger_writer.py  main.py  process_transactions.py
flet-app/: README.md  pyproject.toml
flet-app/src/: chat.py  main.py  stylize_transactions.py
flet-app/src/pages/: details.py  overview.py
static/: app.js  index.html  style.css
