[project]
name = "fints-ledger-importer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.83.1"
]

[dependency-groups]
dev = [
    "flet-cli>=0.83.1",
    "flet-desktop>=0.83.1",
    "flet-web>=0.83.1",
]

[tool.flet]
desktop_flavor = "light"    # Change to "full" to use flet-audio and flet-video
org = "com.mycompany"
product = "fints-ledger-importer"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
